wp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  rules:
  - http:
      paths:
      - path: / 
        pathType: Prefix 
        backend:
          service:
            name: wordpress  
            port:
              number: 80
